Integrate LunarWatcher/SConsStandard - closes #7. Build system improvements, begin improvement of faults reported by ubsan

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "VSConan"]
 	path = VSConan
 	url = https://github.com/lunarwatcher/vsconan
+[submodule "SConsStandard"]
+	path = SConsStandard
+	url = git@github.com:LunarWatcher/SConsStandard
